fix endurance